# poseidon-analysis-hs

./: .gitignore  CHANGELOG.md  CHANGELOGRELEASE.md  Dockerfile.linux  FStatsSpec.hs  README.md  poseidon-analysis-hs.cabal  stack.yaml  testOut
.github/workflows/: main.yml  mastodon.yml  release.yaml  stylishHaskell.yml  twitter.yml
docs/: main.tex  references.bib
goldenTests/: .Rhistory  popConfigRAS.yml  runFstats.sh  runRAS.sh
manual_tests/fstats_tests/: runFstats.sh  testBlockTable.txt  testBlockTable2.txt  testTable.txt  testTable2.txt
manual_tests/ras_tests/: runRAS.sh
src/: CSFS.hs  FStats.hs  FStatsConfig.hs  Main.hs  RAS.hs  RASconfig.hs  Utils.hs  ras.hs
src-executables/: Main.hs
src/Poseidon/Analysis/: FStatsConfig.hs  RASconfig.hs  SnpLoadingParser.hs  Utils.hs
src/Poseidon/Analysis/CLI/: FStats.hs  PCproject.hs  RAS.hs
src/Poseidon/Generator/: Parsers.hs  SampleGeno.hs  Types.hs
src/Poseidon/Generator/CLI/: AdmixPops.hs
test/Poseidon/Analysis/: FStatsSpec.hs  UtilsSpec.hs
test/testPackages/Lamnidis_2018/: Lamnidis_2018.janno  geno.txt
testDat/: popConfig.yaml
testScripts/: popConfig.yml  runTest.sh  testOut  testOutCSFS
tests/fstats_tests/: config.dhall  config.yaml  runFstats.sh
