name:                poseidon-analysis-hs
version:             0.0.0.2
synopsis:            A package with analysis-tools to work with Poseidon Genotype Data
description:         The tools in this package analyse Poseidon-formatted genotype databases, a modular system for storing genotype data from thousands of individuals.
license:             MIT
license-file:        LICENSE
author:              Stephan Schiffels
maintainer:          stephan_schiffels@eva.mpg.de
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     CHANGELOG.md

executable xerxes
    main-is:            Main.hs
    hs-source-dirs:     src
    build-depends:      base, poseidon-hs, optparse-applicative, sequence-formats, foldl,
                        exceptions, vector, lens-family, pipes, pipes-group, pipes-safe,
                        table-layout, parsec, aeson, bytestring, text, yaml, unordered-containers
    other-modules:      Paths_poseidon_analysis_hs, FStats, Utils, RAS, CSFS
    default-language:   Haskell2010
