name:                poseidon-analysis-hs
version:             0.2.0.2
synopsis:            A package with analysis-tools to work with Poseidon Genotype Data
description:         The tools in this package analyse Poseidon-formatted genotype databases, a modular system for storing genotype data from thousands of individuals.
license:             MIT
license-file:        LICENSE
author:              Stephan Schiffels
maintainer:          stephan_schiffels@eva.mpg.de
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     CHANGELOG.md

library
    exposed-modules:    Poseidon.Analysis.FStatsConfig, Poseidon.Analysis.RASconfig, Poseidon.Analysis.Utils,
                        Poseidon.Analysis.CLI.FStats, Poseidon.Analysis.CLI.RAS
    other-modules:      Paths_poseidon_analysis_hs
    hs-source-dirs:     src
    build-depends:      base, poseidon-hs, optparse-applicative, sequence-formats, foldl,
                        exceptions, vector, lens-family, pipes, pipes-group, pipes-safe,
                        table-layout, parsec, aeson, bytestring, text, yaml, unordered-containers, containers
    default-language:   Haskell2010

executable xerxes
    main-is:            Main.hs
    hs-source-dirs:     src
    build-depends:      base, poseidon-analysis-hs
    other-modules:      Paths_poseidon_analysis_hs, FStats, Utils, RAS, RASconfig, FStatsConfig
    default-language:   Haskell2010

Test-Suite xerxes-tests
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    build-depends:      base, poseidon-analysis-hs, hspec